--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "hex-to-binary": "^1.0.1",
-    "pubnub": "^4.29.6"
+    "pubnub": "^4.29.6",
+    "request": "^2.88.2"
   }
 }
