--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "hex-to-binary": "^1.0.1",
     "pubnub": "^4.29.6",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "uuid": "^8.3.0"
   }
 }
